# HospitalLVZ

./: Archivo .json para ejecutar Pacientes.txt
Entrega01/: Unit20_Entrega01_LeonardoVespaZ.docx
output/: BBDD.cpp  BBDD.h  CMakeLists.txt  Cita.cpp  Cita.h  CitasLVZ.csv  GestionPaciente.cpp  Medico.cpp  Medico.h  Paciente.cpp  Paciente.h  Reporte.cpp  Reporte.h  main.cpp  medicosLVZ.csv  pacientesLVZ.csv
output/backup/: medicosLVZ.csv_20250119_140404  medicosLVZ.csv_20250119_204236  pacientesLVZ.csv_20250119_140718
